<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qrcode_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="ch.epfl.sweng.partyup.QRCodeFragment">

    <ImageView
        android:id="@+id/qr_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:contentDescription="@string/desc_qr_code" />

</FrameLayout>
