...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            tools:ignore="NestedWeights"><!--needed for a proper layout-->

            <Button
                android:id="@+id/HostButton"
                android:layout_width="0dp"

                android:layout_height="0dp"


                android:background="@mipmap/bannerwelcomescreen"
...
